--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Eventbrite Flyer</title>
-  <!-- <base href="/"> -->
-
-  <!-- github pages deployed -->
-  <base href="/eventbrite-flyer/">
+  <base href="/">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
