--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Eventbrite Flyer</title>
-  <!-- <base href="/"> -->
-
-  <!-- github pages deployed -->
   <base href="/eventbrite-flyer/">
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,5 +11,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="/eventbrite-flyer/runtime.js"></script><script type="text/javascript" src="/eventbrite-flyer/polyfills.js"></script><script type="text/javascript" src="/eventbrite-flyer/styles.js"></script><script type="text/javascript" src="/eventbrite-flyer/vendor.js"></script><script type="text/javascript" src="/eventbrite-flyer/main.js"></script></body>
 </html>
